11) kernel: ralink_wifi: unify exported struct.<br>
12) kernel: ralink_gpio: add config WPS button gpio number.<br>
13) kernel: ralink_arch: fix reset MT7621 PCIe peripherals.<br>
14) kernel: ralink_spi: fix SPI clock for MT7621 (bclk is 50MHz).<br>
15) kernel: netfilter: nf_nat: change sequence number adjustments to 32 bits.<br>
16) kernel: nf_conntrack_core: show conntrack limit value on table full.<br>
17) kernel: net: allow GRO only for local recived packets.<br>
18) kernel: net: add skb_dst_set_noref_force.<br>
19) kernel: net: tcp: fix tcp fin memory accounting.<br>
20) kernel: net: increase sk_[max_]ack_backlog.<br>
21) kernel: net: validate the range we feed to iov_iter_init() in sys_sendto/sys_recvfrom.<br>
22) kernel: net: separate the close_list and the unreg_list.<br>
23) kernel: net: fix high overhead of vlan sub-device teardown.<br>
<br>
<br>
<b>2.7.x</b><br>
1) build_system: small rework DoConfigure.sh scripts.<br>
2) dhcpv6: fix renewal of IA NA.<br>
3) dhcpv6: close file descriptors on exec.<br>
4) dhcpv6: try and generate a default IFID only if an IFID is not configured.<br>
5) dhcpv6: ignore advertise messages with none of requested data and missed status codes.<br>
6) kernel: ralink_wifi: disable 40MHz intolerant support if DRAFT3 undefined.<br>
7) kernel: ralink_hw_nat: exclude UDP bug check for MT7621.<br>
8) kernel: ralink_raeth: fix SG regression.<br>
9) kernel: net: af_packet: make tpacket_rcv to not set status value before run_filter.<br>
10) kernel: net: ipmr,ip6mr: call ip6mr_free_table() on failure path.<br>
11) kernel: net: netfilter: bridge: kill nf_bridge_pad.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add dsvfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>